Add annotated BBM pics & update BBM text

--- a/work/bbm/index.html
+++ b/work/bbm/index.html
@@ -102,19 +102,10 @@ positive emotional response from our intended audience.</p>
 <h5 class="project-step">Initial Prototype</h5>
 <p>Our first prototype for the Hacking Health weekend aimed to showcase the main functionality of the app -- filling and emptying the beaker with "emotion" and 
 displaying a message appropriate for the emotion level. My roles during the weekend were to conduct research and design the graphics and interface using human factors principles.</p>
-</div>
-<div class="row">
-<div class="one-half column">
+
 <img src="bbm01.png" class="u-max-full-width project-img">
-</div>
-
-<div class="one-half column">
 <img src="bbm02.png" class="u-max-full-width project-img">
-</div>
-</div>
 
-<div class="row">
-<div class="twelve columns content">
 <hr width=50%>
 <p><em>After winning the Pivot Award, we continued to develop the app with the help of Pivot Design Group.</em></p>
 <h5 class="project-step">More Environmental Analysis</h5>
@@ -125,23 +116,15 @@ These included children who could possibly be prescribed the application by a ps
 Instead of tapping to increase/decrease the emotion level, a more intuitive sliding action was added. 
 In later iterations, we included animated bubbles and waves and took advantage of the iPhone Gyroscope to create more interesting interactions. 
 </p>
-</div>
-</div>
-<div class="row">
-<div class="one-half column">
-<img src="bbm03.png" class="u-max-full-width project-img">
-</div>
 
-<div class="one-half column">
+<img src="bbm03.png" class="u-max-full-width project-img">
 <img src="bbm04.png" class="u-max-full-width project-img">
-</div>
-</div>
-<div class="row">
-<div class="twelve columns content">
+
 <p class="copyright" style="text-align:right">(Visual design by Samantha Beekie.)</p>
 <h5 class="project-step">Usability Testing</h5>
 <p>I wrote "quick and dirty" usability testing scenarios and scripts to assess the ease of use and intuitiveness of the next iteration of our app 
-with children under 13. 
+with children under 13. By encouraging thinking aloud, we were able to get detailed reactions of children's thought processes about their own emotions and 
+how they translated that into the app. 
 </p>
 <p align="center"><img src="bbm-05.png" class="u-max-full-width"></center>
 <h5 class="project-step">Outcomes</h5>
