Add annotated wireframes to COPD

--- a/work/copd/index.html
+++ b/work/copd/index.html
@@ -91,15 +91,18 @@
 <h5 class="project-step">Wireframes & Prototypes</h5>
 <p>My colleague created the mobile Axure prototype based on HQO care guidelines and interviews. Based on mobile prototype, I created the desktop prototype in Axure. 
 Working in Agile development, we quickly tested interactions and experiences with each iteration. </p>
-<img src="copd04.png" class="u-max-full-width project-img">
-<p>Usability testing revealed that users did not find or want to use the dropdown menu (left, centre). Thus, we implemented a more familiar hamburger menu (right).</p>
-<img src="copd06.png" class="u-max-full-width project-img">
-<p>The desktop prototype displayed the menu at all times.
+<img src="copd02.png" class="u-max-full-width project-img">
+<img src="copd01.png" class="u-max-full-width project-img">
+<p>Usability testing revealed that users did not find or want to use the dropdown menu. Thus, we implemented a more familiar hamburger menu.</p>
+<img src="copd03.png" class="u-max-full-width project-img">
+<p>Taking advantage of the space, the desktop prototype displayed the menu and search bars at all times.
 Overall, users found both the mobile and desktop versions easy to navigate 
 and useful for less common COPD care information.</p>
+<img src="copd05.png" class="u-max-full-width project-img">
 <h5 class="project-step">Usability Testing</h5>
 <p>My role primarily revolved around usability testing. I wrote 10 usability testing scenarios and pre- and post-surveys. I assisted in 
-recording participant observations and eliciting open-ended feedback with health professionals in their offices/hospitals. </p>
+recording participant observations and eliciting open-ended feedback with health professionals in their offices/hospitals. We asked for feedback on 
+the accuracy of the guidelines and the potential helpfulness of the app itself. </p>
 
 <p>We further optimized and simplified the mobile and desktop prototypes using the feedback we received during testing as well as meetings with our stakeholders. 
 I analyzed and compared data from two rounds of testing, which showed improved navigation ability and satisfaction with the application.</p>
