new index under construction

--- a/index2.html
+++ b/index2.html
@@ -6,9 +6,9 @@
 <head>
 
   <meta charset="utf-8">
-  <title>Allison Yan | Home</title>
-  <meta name="description" content="Allison Yan, UX/UI Designer, Bubble Tea Enthusiast. Toronto.">
-  <meta name="keywords" content="allison yan">
+  <title>something afoot</title>
+  <meta name="description" content="Allison Yan, UX/UI Designer, Toronto.">
+  <meta name="keywords" content="allison yan, healthcare, user experience, design, Toronto, Canada, interface, service">
   <meta name="robots" content="index, follow" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -16,7 +16,12 @@
 </head>
 <body>
 
-UNBREAKABLE
+don't fret <br>
+i'll be back soon<br>
+if you want to talk about healthcare, design, art, <a href="http://www.last.fm/user/babymilk" target='_blank'>music</a>, find me:<br>
+e-mail: allison.yan AT gmail.com<br>
+twitter: <a href="http://www.twitter.com/allisonyan_" target='_blank'>@allisonyan_</a><br>
+linkedin: <a href="http://www.linkedin.com/in/allisonyan" target='_blank'>allisonyan</a>
 
 </body>
 </html>
