--- a/index2.html
+++ b/index2.html
@@ -16,12 +16,13 @@
 </head>
 <body>
 
-don't fret <br>
-i'll be back soon<br>
-if you want to talk about healthcare, design, art, <a href="http://www.last.fm/user/babymilk" target='_blank'>music</a>, find me:<br>
+
+i'll be back soon<br><br>
+
 e-mail: allison.yan AT gmail.com<br>
 twitter: <a href="http://www.twitter.com/allisonyan_" target='_blank'>@allisonyan_</a><br>
-linkedin: <a href="http://www.linkedin.com/in/allisonyan" target='_blank'>allisonyan</a>
+linkedin: <a href="http://www.linkedin.com/in/allisonyan" target='_blank'>allisonyan</a><br>
+last.fm: <a href="http://www.last.fm/user/babymilk" target='_blank'>babymilk</a>
 
 </body>
 </html>
